--- a/.github/workflows/phpunit-tests.yml
+++ b/.github/workflows/phpunit-tests.yml
@@ -32,28 +32,20 @@ jobs:
         php-version: '8.2'
         extensions: mbstring, mysql, pdo_mysql
 
-    - name: Install Composer dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    - name: Copy .env.example to .env
-      run: cp .env.example .env
-
-    - name: Generate application key
-      run: php artisan key:generate
-
-    - name: Run migrations
-      run: php artisan migrate --force
+    - name: Prepare environment
+      run: |
+        composer install --prefer-dist --no-progress --no-suggest
+        cp .env.example .env
+        php artisan key:generate
+        php artisan migrate --force
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'
-
-    - name: Install NPM dependencies
-      run: npm install
-
-    - name: Run Vue.js for views
-      run: npm run build
+        node-version: '20'
+      run: |
+        npm install
+        npm run build
 
     - name: Run PHPUnit tests
       run: php artisan test
