--- a/.github/workflows/phpunit-tests.yml
+++ b/.github/workflows/phpunit-tests.yml
@@ -48,7 +48,9 @@ jobs:
       run: |
         npm install
         npm run build
+        
   run-tests:
+    runs-on: ubuntu-latest
     needs: prepare-environment
 
   steps:
