--- a/.github/workflows/phpunit-tests.yml
+++ b/.github/workflows/phpunit-tests.yml
@@ -51,7 +51,7 @@ jobs:
 
   run-tests:
     runs-on: ubuntu-latest
-    needs: prepare-environment
+    needs: prepare_environment
 
     steps:
     - uses: actions/checkout@v3
